[gd_scene load_steps=10 format=3 uid="uid://ddvonpcdsd4uq"]

[ext_resource type="Script" uid="uid://cybwqopstnkqi" path="res://Scripts/UI/options.gd" id="1_sncl2"]

[sub_resource type="Theme" id="Theme_j6lap"]
default_font_size = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sncl2"]
color = Color(0, 0.43137255, 0.44705883, 0.47843137)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jt3no"]
color = Color(1, 0, 0.21568628, 1)
thickness = 6

[sub_resource type="Theme" id="Theme_35y0k"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_0s3wi"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_jme0m"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_sncl2"]
default_font_size = 100

[sub_resource type="Theme" id="Theme_jt3no"]
default_font_size = 40

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sncl2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="volume" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_j6lap")
text = "Volume"

[node name="volume_slider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_sncl2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jt3no")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jt3no")
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="mute" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_35y0k")
text = "Mute"

[node name="mute_check" type="CheckBox" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="resolution" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_0s3wi")
text = "Resolution"

[node name="resolutions" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="fullscreen" type="Label" parent="Panel/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_jme0m")
text = "Full-Screen"

[node name="fullscreen_opt" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Options" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -381.5
offset_right = 381.5
offset_bottom = 138.0
grow_horizontal = 2
theme = SubResource("Theme_sncl2")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -97.0
offset_right = -17.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_jt3no")
theme_override_colors/icon_hover_color = Color(1, 0.18039216, 1, 1)
text = "Back"

[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer/volume_slider" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer2/mute_check" to="." method="_on_mute_check_toggled"]
[connection signal="item_selected" from="Panel/VBoxContainer/HBoxContainer3/resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer4/fullscreen_opt" to="." method="_on_fullscreen_opt_toggled"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
